# cha0s

./: .commit-msg.tmp  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LLMS.md  README.md  README_zh.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
clients/python/: INSTALL_VIA_AGENT.md  README.md  plugin.yaml  pyproject.toml
clients/python/doctorchaos_hermes/: __init__.py  client.py  exceptions.py  plugin.py  types.py
clients/python/tests/: test_client.py  test_degradation.py  test_end_to_end.py  test_exceptions.py  test_focus_topic.py  test_idempotency.py  test_plugin_abc.py
examples/cli-demo/: README.md  package.json  tsconfig.json
examples/cli-demo/src/: index.ts  mock-scripts.test.ts  mock-scripts.ts
examples/cli-demo/src/ui/: ansi.ts  renderer.ts
